[project]
name = "tasks"
version = "0.1.0"
description = ""
authors = [{ name = "Micah Lee", email = "micah@micahflee.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click (>=8.1.8,<9.0.0)", "beautifulsoup4 (>=4.13.3,<5.0.0)", "types-beautifulsoup4 (>=4.12.0.20250204,<5.0.0.0)", "datasette (>=0.65.1,<0.66.0)"]

[tool.poetry]
packages = [{ include = "tasks", from = "src" }]
scripts = { tasks = "tasks:cli" }

[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.12.0.20250204"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
