[project]
name = "tasks"
version = "0.1.0"
description = ""
authors = [{ name = "Micah Lee", email = "micah@micahflee.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click (>=8.1.8,<9.0.0)"]

[tool.poetry]
packages = [{ include = "tasks", from = "src" }]
scripts = { tasks = "tasks:cli" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
