[project]
name = "tasks"
version = "0.1.0"
description = ""
authors = [{ name = "Micah Lee", email = "micah@micahflee.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "pandas (>=2.0.0)",
    "pyarrow (>=14.0.0)",
    "fastparquet (>=2023.0.0)",
    "pillow (>=10.0.0)",
    "requests (>=2.0.0)",
    "openai (>=1.0.0)",  # Compatible with OpenRouter
    "tqdm (>=4.0.0)",
    "python-dotenv (>=1.0.0)",
    "beautifulsoup4 (>=4.12.0)",  # For proper HTML parsing
]

[tool.poetry]
packages = [{ include = "tasks", from = "src" }]
scripts = { tasks = "tasks:cli" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
